Added build task and npm command. Added sass-prod task.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4"
+  },
+  "scripts": {
+    "build": "gulp build"
   }
 }
