--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Empty project template",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "webpack --mode production",
+    "watch": "webpack --watch --mode development"
   },
   "keywords": [
     "empty project",
@@ -12,5 +14,11 @@
   ],
   "author": "Carlos Orbea",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
