--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.7.0",
     "html-loader": "^0.5.5",
