--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "webpack --mode production",
-    "watch": "webpack --watch --mode development"
+    "start": "webpack-dev-server --open",
+    "watch": "webpack --watch --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [
     "empty project",
