--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "npm run clean && webpack --mode=development && webpack-dev-server --open",
+    "start": "npm run clean && webpack --mode development && webpack-dev-server --open",
     "watch": "webpack --watch --mode development",
-    "build": "npm run clean && webpack --mode=production",
+    "build": "npm run clean && webpack --mode production",
     "clean": "rimraf ./dist"
   },
   "keywords": [
@@ -23,6 +23,7 @@
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.1.7",
     "eslint": "^5.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
