--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@babel/preset-env": "^7.1.0",
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.7",
     "eslint": "^5.7.0",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
